fix rankings table on mobile; try fixing dropdown menu

--- a/stocks/css/main.css
+++ b/stocks/css/main.css
@@ -37,6 +37,10 @@
   cursor: pointer;
 }
 
+.table-fixed {
+  table-layout: fixed;
+}
+
 /* prevent cursor from turning into i-bar */
 td, th {
   cursor: default;
